// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container (v2) block Rendered styles should match snapshot 1`] = `
Object {
  ".-content-wrapper > h1, .-content-wrapper > h2, .-content-wrapper > h3, .-content-wrapper > h4, .-content-wrapper > h5, .-content-wrapper > h6": Object {
    "color": undefined,
  },
  ".-content-wrapper > p, .-content-wrapper > ol li, .-content-wrapper > ul li": Object {
    "color": undefined,
  },
  ".-wrapper > .lmb-container__side": Object {
    "alignItems": undefined,
    "paddingBottom": undefined,
    "paddingTop": undefined,
  },
  ".-wrapper.lmb-container__wrapper": Object {
    "backgroundAttachment": undefined,
    "backgroundBlendMode": undefined,
    "backgroundColor": undefined,
    "backgroundImage": undefined,
    "backgroundPosition": undefined,
    "backgroundRepeat": undefined,
    "backgroundSize": undefined,
    "borderRadius": undefined,
    "minHeight": undefined,
    "paddingBottom": undefined,
    "paddingTop": undefined,
  },
  ".-wrapper.lmb-container__wrapper:before": Object {
    "backgroundColor": undefined,
    "backgroundImage": undefined,
    "mixBlendMode": undefined,
    "opacity": undefined,
  },
  "a:hover, a:hover:visited": Object {
    "color": undefined,
  },
  "desktopTablet": Object {
    ".-content-wrapper.lmb-container__content-wrapper": Object {
      "width": undefined,
    },
  },
  "editor": Object {
    ".-content-wrapper > * > * [data-type*=\\"core/heading\\"] h1, .-content-wrapper > * > * [data-type*=\\"core/heading\\"] h2, .-content-wrapper > * > * [data-type*=\\"core/heading\\"] h3, .-content-wrapper > * > * [data-type*=\\"core/heading\\"] h4, .-content-wrapper > * > * [data-type*=\\"core/heading\\"] h5, .-content-wrapper > * > * [data-type*=\\"core/heading\\"] h6": Object {
      "color": undefined,
    },
    ".-content-wrapper > * > * [data-type*=\\"core/paragraph\\"] p, .-content-wrapper > * > * [data-type*=\\"core/list\\"] li": Object {
      "color": undefined,
    },
    ".-wrapper.lmb-container__wrapper > .lmb-video-background, .-wrapper.lmb-container__wrapper:before": Object {
      "borderRadius": "12px !important",
    },
    "> .lmb-inner-block > .lmb-block-content > .lmb-container__wrapper": Object {
      "justifyContent": undefined,
    },
    "a, a:visited, a:focus": Object {
      "color": undefined,
    },
    "a:hover": Object {
      "color": undefined,
    },
    "desktopTablet": Object {
      "> .lmb-inner-block > .lmb-block-content > .lmb-container__wrapper": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "mobile": Object {
      "> .lmb-inner-block > .lmb-block-content > .lmb-container__wrapper": Object {
        "justifyContent": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "tablet": Object {
      "> .lmb-inner-block > .lmb-block-content > .lmb-container__wrapper": Object {
        "justifyContent": undefined,
      },
    },
    "tabletOnly": Object {
      "> .lmb-inner-block > .lmb-block-content > .lmb-container__wrapper": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
  },
  "h1, h2, h3, h4, h5, h6": Object {
    "color": undefined,
  },
  "mobile": Object {
    ".-content-wrapper.lmb-container__content-wrapper": Object {
      "width": undefined,
    },
    ".-wrapper > .lmb-container__side": Object {
      "alignItems": undefined,
      "paddingBottom": undefined,
      "paddingTop": undefined,
    },
    ".-wrapper.lmb-container__wrapper": Object {
      "backgroundImage": undefined,
      "backgroundPosition": undefined,
      "backgroundRepeat": undefined,
      "backgroundSize": undefined,
      "minHeight": undefined,
      "paddingBottom": undefined,
      "paddingTop": undefined,
    },
    ".-wrapper.lmb-container__wrapper:before": Object {
      "opacity": undefined,
    },
  },
  "p, li, label, table": Object {
    "color": undefined,
  },
  "saveOnly": Object {
    "> .lmb-inner-block > .lmb-block-content > *": Object {
      "justifyContent": undefined,
    },
    "a, a:visited, a:focus": Object {
      "color": undefined,
    },
    "desktopTablet": Object {
      "> .lmb-inner-block > .lmb-block-content > *": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "mobile": Object {
      "> .lmb-inner-block > .lmb-block-content > *": Object {
        "justifyContent": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "tablet": Object {
      "> .lmb-inner-block > .lmb-block-content > *": Object {
        "justifyContent": undefined,
      },
    },
    "tabletOnly": Object {
      "> .lmb-inner-block > .lmb-block-content > *": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
  },
  "tablet": Object {
    ".-wrapper > .lmb-container__side": Object {
      "alignItems": undefined,
      "paddingBottom": undefined,
      "paddingTop": undefined,
    },
    ".-wrapper.lmb-container__wrapper": Object {
      "backgroundImage": undefined,
      "backgroundPosition": undefined,
      "backgroundRepeat": undefined,
      "backgroundSize": undefined,
      "minHeight": undefined,
      "paddingBottom": undefined,
      "paddingTop": undefined,
    },
    ".-wrapper.lmb-container__wrapper:before": Object {
      "opacity": undefined,
    },
  },
  "tabletOnly": Object {
    ".-content-wrapper.lmb-container__content-wrapper": Object {
      "width": undefined,
    },
  },
}
`;

exports[`Container (v2) block Rendered styles should match snapshot with modified attributes 1`] = `
Object {
  ".-content-wrapper > h1, .-content-wrapper > h2, .-content-wrapper > h3, .-content-wrapper > h4, .-content-wrapper > h5, .-content-wrapper > h6": Object {
    "color": "#123456",
  },
  ".-content-wrapper > p, .-content-wrapper > ol li, .-content-wrapper > ul li": Object {
    "color": "#123456",
  },
  ".-wrapper > .lmb-container__side": Object {
    "alignItems": "contentHorizontalAlign !important",
    "paddingBottom": undefined,
    "paddingTop": undefined,
  },
  ".-wrapper.lmb-container__wrapper": Object {
    "backgroundAttachment": "fixed",
    "backgroundBlendMode": "columnBackgroundImageBlendMode",
    "backgroundColor": "#123456 !important",
    "backgroundImage": "url(columnBackgroundMediaUrl)",
    "backgroundPosition": "columnBackgroundPosition",
    "backgroundRepeat": "columnBackgroundRepeat",
    "backgroundSize": "columnBackgroundSize !important",
    "borderBottomWidth": "123px !important",
    "borderColor": "#123456 !important",
    "borderLeftWidth": "123px !important",
    "borderRadius": "123px !important",
    "borderRightWidth": "123px !important",
    "borderStyle": "columnBorderType !important",
    "borderTopWidth": "123px !important",
    "minHeight": undefined,
    "paddingBottom": undefined,
    "paddingTop": undefined,
  },
  ".-wrapper.lmb-container__wrapper:before": Object {
    "backgroundColor": "#123456 !important",
    "backgroundImage": undefined,
    "mixBlendMode": undefined,
    "opacity": 12.3,
  },
  "a:hover, a:hover:visited": Object {
    "color": "#123456",
  },
  "desktopTablet": Object {
    ".-content-wrapper.lmb-container__content-wrapper": Object {
      "width": "123% !important",
    },
  },
  "editor": Object {
    ".-content-wrapper > * > * [data-type*=\\"core/heading\\"] h1, .-content-wrapper > * > * [data-type*=\\"core/heading\\"] h2, .-content-wrapper > * > * [data-type*=\\"core/heading\\"] h3, .-content-wrapper > * > * [data-type*=\\"core/heading\\"] h4, .-content-wrapper > * > * [data-type*=\\"core/heading\\"] h5, .-content-wrapper > * > * [data-type*=\\"core/heading\\"] h6": Object {
      "color": "#123456",
    },
    ".-content-wrapper > * > * [data-type*=\\"core/paragraph\\"] p, .-content-wrapper > * > * [data-type*=\\"core/list\\"] li": Object {
      "color": "#123456",
    },
    ".-wrapper.lmb-container__wrapper > .lmb-video-background, .-wrapper.lmb-container__wrapper:before": Object {
      "borderRadius": "123px !important",
    },
    "> .lmb-inner-block > .lmb-block-content > .lmb-container__wrapper": Object {
      "justifyContent": undefined,
    },
    "a, a:visited, a:focus": Object {
      "color": "#123456 !important",
    },
    "a:hover": Object {
      "color": "#123456 !important",
    },
    "desktopTablet": Object {
      "> .lmb-inner-block > .lmb-block-content > .lmb-container__wrapper": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "mobile": Object {
      "> .lmb-inner-block > .lmb-block-content > .lmb-container__wrapper": Object {
        "justifyContent": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "tablet": Object {
      "> .lmb-inner-block > .lmb-block-content > .lmb-container__wrapper": Object {
        "justifyContent": undefined,
      },
    },
    "tabletOnly": Object {
      "> .lmb-inner-block > .lmb-block-content > .lmb-container__wrapper": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
  },
  "h1, h2, h3, h4, h5, h6": Object {
    "color": "#123456",
  },
  "mobile": Object {
    ".-content-wrapper.lmb-container__content-wrapper": Object {
      "width": "123% !important",
    },
    ".-wrapper > .lmb-container__side": Object {
      "alignItems": undefined,
      "paddingBottom": undefined,
      "paddingTop": undefined,
    },
    ".-wrapper.lmb-container__wrapper": Object {
      "backgroundImage": "url(columnMobileBackgroundMediaUrl)",
      "backgroundPosition": "columnMobileBackgroundPosition",
      "backgroundRepeat": "columnMobileBackgroundRepeat",
      "backgroundSize": "columnMobileBackgroundSize !important",
      "borderBottomWidth": "123px !important",
      "borderLeftWidth": "123px !important",
      "borderRightWidth": "123px !important",
      "borderTopWidth": "123px !important",
      "minHeight": undefined,
      "paddingBottom": undefined,
      "paddingTop": undefined,
    },
    ".-wrapper.lmb-container__wrapper:before": Object {
      "opacity": 12.3,
    },
  },
  "p, li, label, table": Object {
    "color": "#123456",
  },
  "saveOnly": Object {
    "> .lmb-inner-block > .lmb-block-content > *": Object {
      "justifyContent": undefined,
    },
    "a, a:visited, a:focus": Object {
      "color": "#123456",
    },
    "desktopTablet": Object {
      "> .lmb-inner-block > .lmb-block-content > *": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "mobile": Object {
      "> .lmb-inner-block > .lmb-block-content > *": Object {
        "justifyContent": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "tablet": Object {
      "> .lmb-inner-block > .lmb-block-content > *": Object {
        "justifyContent": undefined,
      },
    },
    "tabletOnly": Object {
      "> .lmb-inner-block > .lmb-block-content > *": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
  },
  "tablet": Object {
    ".-wrapper > .lmb-container__side": Object {
      "alignItems": undefined,
      "paddingBottom": undefined,
      "paddingTop": undefined,
    },
    ".-wrapper.lmb-container__wrapper": Object {
      "backgroundImage": "url(columnTabletBackgroundMediaUrl)",
      "backgroundPosition": "columnTabletBackgroundPosition",
      "backgroundRepeat": "columnTabletBackgroundRepeat",
      "backgroundSize": "columnTabletBackgroundSize !important",
      "borderBottomWidth": "123px !important",
      "borderLeftWidth": "123px !important",
      "borderRightWidth": "123px !important",
      "borderTopWidth": "123px !important",
      "minHeight": undefined,
      "paddingBottom": undefined,
      "paddingTop": undefined,
    },
    ".-wrapper.lmb-container__wrapper:before": Object {
      "opacity": 12.3,
    },
  },
  "tabletOnly": Object {
    ".-content-wrapper.lmb-container__content-wrapper": Object {
      "width": "123% !important",
    },
  },
}
`;
